Enable horizontal scrolling for deployment logs panel / fixes #436

--- a/src/app/deployments/styles/_instance.scss
+++ b/src/app/deployments/styles/_instance.scss
@@ -1,5 +1,5 @@
 pre.container-log {
-  white-space: pre-line;
+  white-space: pre;
 }
 
 .instances {
